fixed overflow issue

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -314,8 +314,8 @@
         height: 350px;
         text-align: left !important;
         margin-top: 30px;
-       /* overflow: scroll;
-      overflow-x: hidden;*/
+       overflow: scroll;
+      overflow-x: hidden;
     
   }  
   
@@ -549,6 +549,7 @@
     background-color: #d3d3d3;
     padding: 5rem 0;
     margin-top: 5%;
+    
     
 }
   
